# 3DClans

./: .gitignore  AGENTS.md  BENCHMARK_RESTRUCTURE_PLAN.md  BENCHMARK_USAGE.md  ClansFile.py  ClansFileGenerator.py  ConfigFile.py  Foldseek.py  IMPLEMENTATION_SUMMARY.md  InputFileType.py  README.md  ScoresEvaluator_2.py  StructSimComputer.py  StructSimTool.py  TMalign.py  ToolType.py  USalign.py  api_utils.py  benchmark.py  benchmark_tool_speed.py  dependency_checks.py  example_benchmark.py  fasta2PDB.py  fasta_utils.py  file_utils.py  main.py  pdb_names.txt  pyproject.toml  requirements.txt  structure_utils.py  utils_for_PDB.py  utils_for_structures_and_fasta.py
.github/: copilot-instructions.md
Benchmark/: TMalign.py  Tool.py  USalign.py  benchmark.py
Benchmark/input/: big_dataset.a2m  small_dataset.a2m
Dataset_Generator/: DatasetGenerator.py  main.py
Foldseek_working_dir/: alignmentDb.0  alignmentDb.1  alignmentDb.7  alignmentDb.index  alignmentFile  foldseekDB  foldseekDB.index  foldseekDB.lookup  foldseekDB.source  foldseekDB_ca  foldseekDB_ca.index  foldseekDB_h  foldseekDB_h.index  foldseekDB_ss
Foldseek_working_dir/tmpDir/: latest
Scores_Evaluation/: 50_cleaned.clans  50_cleaned.conf  50_cleaned_clustered_r_0_p_1e-10.clans  50_cleaned_clustered_r_100000_p_1e-10.clans  50_cleaned_clustered_r_10000_p_1e-10.clans  50_cleaned_seq.clans  50_cleaned_seq.conf  50_cleaned_seq_clustered_r_100000_p_1e-10.clans  50_cleaned_seq_clustered_r_10000_p_1e-10.clans  ClansDataExtractor.py  ClansVisualizer.py  ClusterAnalyzer.py  ScoresEvaluator.py  ScoresEvaluator_1.py  ScoresEvaluator_2.py  evaluation.ipynb  scores_evaluation.py  test.conf
Scores_Evaluation/blast_files/: dataset_1_cleaned_blast.tsv  dataset_2_cleaned_blast.tsv  dataset_3_cleaned_blast.tsv  temp_blast_db.phr  temp_blast_db.pin  temp_blast_db.psq
Scores_Evaluation/clans_files/: dataset_1_cleaned.clans  dataset_2_cleaned.clans
Scores_Evaluation/clans_files_seqsim/: dataset_1_cleaned.clans  dataset_1_cleaned_out.clans  dataset_2_cleaned.clans  dataset_2_cleaned_out.clans  dataset_3_cleaned.clans  dataset_3_cleaned_out.clans
Scores_Evaluation/clans_files_structsim/: dataset_1_cleaned.clans  dataset_1_cleaned_out.clans  dataset_2_cleaned.clans  dataset_2_cleaned_out.clans  dataset_3_cleaned.clans  dataset_3_cleaned_out.clans
USalign_working_dir/: pdb_names.txt
docs/: BENCHMARK_USAGE.md  ISSUE_34_TSV_PERFORMANCE_PLAN.md  ISSUE_47_CUSTOM_STRUCTURE_DB_PLAN.md  LOGGING_REFACTORING_PLAN.md  SUBPROCESS_PROGRESS.md  TESTING.md  TESTING_GUIDE.md  TESTING_PLAN.md
example_files/: example.fasta
examples/big_fasta_files/: 500.fasta  (+2 more)
notebooks/: evaluation.ipynb
old_clans/: utils_old_clans.py
recovered_CLANS/: utils_old_clans.py
test/: pdb_names.txt
tests/: conftest.py
(+219 files in other folders)
