[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clans3d"
version = "0.1.0"
description = "Generate CLANS visualization files from protein structures using pairwise structural similarity scores."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ElhabashyLab" }
]
dependencies = [
    "biopython>=1.80",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "hdbscan>=0.8",
    "networkx>=3.0",
    "python-igraph>=0.11",
    "leidenalg>=0.9",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "requests>=2.28",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
clans3d = "clans3d.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring Foldseek and/or USalign in PATH (deselect with '-m not e2e')",
    "integration: integration tests using real fixture files but no external binaries",
    "regression: regression tests that compare output against stored baselines",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clans3d.legacy" = ["*.jar"]

[tool.coverage.run]
source = ["clans3d"]
omit = [
    "tests/*",
    "src/clans3d/legacy/*", # Exclude legacy JAR wrappers
    "src/clans3d/benchmark/*", # Exclude benchmarking scripts
    "src/clans3d/dataset_generator/*" # Exclude dataset generator
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
